# number-plate-recognition

./: .gitattributes  .gitignore  LICENCE.md  README.md  pyproject.toml  test.py
src/: detect.py  extract_plate.py  main.py  perform_ocr.py  preprocess.py  preprocess_plate.py
src/templates/: index.html
