[project]
name = "number-plate-recognition"
version = "0.1.0"
description = "Number plate recognition tool with python"
authors = [
    {name = "deexor64", email = "191124667+deexor64@users.noreply.github.com"},
]
dependencies = ["opencv-python>=4.13.0.90", "numpy>=2.4.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python3 src/main.py"
