[project]
name = "number-plate-recognition"
version = "0.1.0"
description = "Number plate recognition tool with python"
authors = [
    {name = "deexor64", email = "191124667+deexor64@users.noreply.github.com"},
]
dependencies = ["opencv-python>=4.13.0.90", "numpy>=2.4.1", "pytesseract>=0.3.13", "flask>=3.1.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python3 src/main.py"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
